--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,83 @@
 body{
-  font-family: 'Blaka Hollow', cursive;
+  font-family: 'Press Start 2P', cursive;;
 }
 
+h1{
+  margin: 0 auto;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  width: 80%;
+  font-size: 4rem;
+  font-weight: 100;
+  color: green;
+  text-align: center;
+  line-height: 5rem;
+}
+
+main{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+
+.instructions__container{
+  width: 20%;
+  margin: 0 auto;
+  text-align: center;
+
+}
+
+.instructions__text{
+  
+  font-size: 2rem;
+  line-height: 3rem;
+  margin-block-start: 0em;
+  margin-block-end: 3em;
+
+}
+
+.instructions__image{
+  width: 15rem;
+}
+
+
 .canvas__container{
-  width: 100%;
+  width: 1000px;
   text-align: center;
 }
 
 .canvas{
-  display: inline;
+  display: inline-block;
 }
+
+.score__container{
+  width: 20%;
+  margin: 0 auto;
+  text-align: center;
+  align-self: flex-start;
+
+}
+
+.score__title{
+  font-weight: 100;
+  font-size: 5rem;
+  margin-top: 3.5rem;
+  margin-block-end: 0.5em;
+}
+
+.score__images__container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.score__images__container img{
+  width: 5rem;
+  height: 6rem;
+
+}
+
+
+
