--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,16 +88,26 @@ main{
   background-color: rgb(79, 107, 0);
   margin-top: 2rem;
   padding: 0 6rem;
+
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .footer__personal{
   display: flex;
+  align-items: center;
   gap: 3.125rem;
 }
 
 .footer__personal__name{
   border-right: solid white 1px;
   padding-right: 3.125rem;
+  font-weight: 800;
+  font-size: 1.5rem;
+}
+
+.footer__personal__profession{
+  font-weight: 200;
+  font-size: 1.2rem;
 }
 
 
