mobile text update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,9 @@ main{
   .mobile__view{
     display: block;
     text-align: center;
+    width: 80vw;
+    margin: 0 auto;
+    
     margin-top: 50%;
 
   }
